[project]
name = "imlpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "numpy==1.24.1",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "tqdm>=4.67.1",
  "pandas>=2.1.0",
  "joblib>=1.5.2",
  "einops>=0.8.1",
  "timm>=1.0.22",
  "open3d>=0.19.0",
  "opencv-python>=4.8.1.78",
  "xformers==0.0.29.post2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
xformers = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.workspace]
members = [
    "ImLPR",
]
